...

    return Scaffold(
      backgroundColor: Color(0xff4C748B),
      body: ListView(
        children: [
          Padding(padding: EdgeInsets.fromLTRB(0, 50, 0, 0)),
          Text("${stepTimeRemaining}", style: TextStyle(color: Color(0xFFFFFFFF), fontFamily: 'kollektif', fontSize: 96), textAlign: TextAlign.center, key: Key('time-remaining'),),
          Padding(padding: EdgeInsets.fromLTRB(0, 30, 0, 0)),
          Text("${currentRecipeStep.text}", style: TextStyle(color: Color(0xFFFFFFFF), fontFamily: 'kollektif', fontSize: 24), textAlign: TextAlign.center,key: Key('current-step-text')),
          Padding(padding: EdgeInsets.fromLTRB(0, 60, 0, 0)),
          Container(
            margin: EdgeInsets.all(15.0),
            child: Text("Steps", style: TextStyle(color: Color(0xFFFFFFFF)),textAlign: TextAlign.left),
          ),
          for (RecipeStep step in widget.recipe.steps)
...
