...
    RecipeStep("Cover and wait", 90),
    RecipeStep("Stir", 15),
    RecipeStep("Cover and wait", 75),
    RecipeStep("Stir", 15),
  ];
  CoffeeRecipe recipe = CoffeeRecipe(
      "Sweet Maria's",
      22,
      360,
      "finely ground coffee",
      "The original recipe: makes one delicious cup",
      steps);
  return recipe;
...
  List<RecipeStep> steps = [
    RecipeStep("Bloom coffee grounds with 100g of water", 30),
    RecipeStep("Add 240g of water and steep coffee", 150),
    RecipeStep("Drawdown coffee", 90),
  ];
  CoffeeRecipe recipe = CoffeeRecipe(
      "Texas Coffee School",
      24,
      340,
      "coarse ground coffee",
      "The original recipe: makes one delicious cup",
      steps);
  return recipe;
...
